--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://johnyejin.github.io/hackernews",
+  "homepage": "https://johnyejin.github.io/hackernews",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
